[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://addons/fast_options/scripts/options_menu.gd" type="Script" id=2]
[ext_resource path="res://options/controls.gd" type="Script" id=3]
[ext_resource path="res://addons/fast_options/default_options/display.gd" type="Script" id=4]
[ext_resource path="res://addons/fast_options/default_options/graphics.gd" type="Script" id=5]
[ext_resource path="res://ui/game_theme.tres" type="Theme" id=6]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -34.0
margin_right = 35.5
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="VBoxContainer"]
margin_right = 85.0
margin_bottom = 31.0
text = "RESUME"

[node name="options" type="Button" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 85.0
margin_bottom = 66.0
text = "OPTIONS"

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 85.0
margin_bottom = 101.0
text = "EXIT"

[node name="FastOptionsMenu" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -200.5
margin_right = 245.0
margin_bottom = 200.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
option_scripts = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ]
[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="apply" from="FastOptionsMenu" to="." method="hide_options"]
[connection signal="cancel" from="FastOptionsMenu" to="." method="hide_options"]
